--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     },
     "devDependencies": {
         "del": "^2.2.2",
+        "babel-core": "^6.26.3",
         "gulp": "^3.9.1",
+        "gulp-babel": "^7.0.1",
         "gulp-clean-css": "^3.0.4",
         "gulp-concat": "^2.6.1",
         "gulp-htmlclean": "^2.7.14",
@@ -20,5 +22,8 @@
     },
     "engines": {
         "node": "^6.9"
+    },
+    "dependencies": {
+        "babel-preset-es2015": "^6.24.1"
     }
 }
